--- a/config.json
+++ b/config.json
@@ -3,18 +3,19 @@
     "scheduler": "DPM++ 2M SDE Karras",
     "generate_video": false,
     "init_image" : "preview/your_init_image.jpg",
-    "prompt": "masterpiece, best quality, ultra-detailed, illustration, 1girl, solo, outdoors, camping, night, mountains, nature, stars, moon, tent, twin ponytails, green eyes, cheerful, happy, backpack, sleeping bag, camping stove, water bottle, mountain boots, gloves, sweater, hat, flashlight, forest, rocks, river, wood, smoke, shadows, contrast, clear sky, constellations, Milky Way, peaceful, serene, quiet, tranquil, remote, secluded, adventurous, exploration, escape, independence, survival, resourcefulness, challenge, perseverance, stamina, endurance, observation, intuition, adaptability, creativity, imagination, artistry, inspiration, beauty, awe, wonder, gratitude, appreciation, relaxation, enjoyment, rejuvenation, mindfulness, awareness, connection, harmony, balance, texture, detail, realism, depth, perspective, composition, color, light, shadow, reflection, refraction, tone, contrast, foreground, middle ground, background, naturalistic, figurative, representational, impressionistic, expressionistic, abstract, innovative, experimental, unique",
+    "prompt": "masterpiece, best quality, realistic, detailed background, the forgotten city made of white marble, grand, epic, fantasy, mystical, sunbeam, soft lighting, volumetric lighting, dramatic",
     "negative_prompt": "(worst quality:2), (low quality:2), (normal quality:2), lowres, normal quality, ((monochrome)), ((grayscale)), bad anatomy,ng_deepnegative_v1_75t,easynegative, badhandv4, text, watermark,",
     "strength":0.65,
     "num_img":6,
-    "guidance_scale":6.5,
-    "num_inference_steps":40,
-    "nsteps":80,
-    "width":768,
-    "height":512,
-    "zoom":0.98,
+    "guidance_scale":7,
+    "num_inference_steps":25,
+    "nframes":80,
+    "width":512,
+    "height":768,
+    "zoom":1.05,
     "out_dir":"preview",
     "fps":10,
+    "diffusion_cadence":2,
     "lora_dict":{
         "your_lora_1.safetensors":0.5,
         "your_lora_2.safetensors":0.8
