--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "model_path": "your_model.safetensors",
     "scheduler": "DPM++ 2M SDE Karras",
-    "generate_video": false,
     "init_image" : "preview/your_init_image.jpg",
     "prompt": "masterpiece, best quality, realistic, detailed background, the forgotten city made of white marble, grand, epic, fantasy, mystical, sunbeam, soft lighting, volumetric lighting, dramatic",
+    "generate_animation": false,
     "negative_prompt": "(worst quality:2), (low quality:2), (normal quality:2), lowres, normal quality, ((monochrome)), ((grayscale)), bad anatomy,ng_deepnegative_v1_75t,easynegative, badhandv4, text, watermark,",
     "strength":0.65,
     "num_img":6,
